# emu-8080

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  emu_8080.h
src/: disassembler.rs  emulator.rs  ffi.rs  lib.rs  main.rs
src/disassembler/: mod.rs
tests/: compare_i8080.rs  diag_suites.rs  utils.rs
