[package]
name = "emu-8080"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "diag"
required-features = ["diagsupport"]

[[bin]]
name = "run"

[dependencies]
bitflags = "1.3.2"

[features]
default = ["logging"]
logging = []
diagsupport = []
