[package]
name = "emu-8080"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib"]

[[bin]]
name = "run"

[dependencies]
bitflags = "1.3.2"

[dev-dependencies]
i8080 = { git = "https://github.com/mohanson/i8080", rev = "7d04939" }

# Enable optimization for tests
[profile.test]
opt-level = 3

[features]
logging = []